Closed
Bug 78376
Opened 24 years ago
Closed 24 years ago
###!!! ASSERTION: New URI failed: 'Error', file mozilla\netwerk\base\src\nsProtocolProxyService.cpp, line 302
Categories
(Core :: Networking, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla0.9.1
People
(Reporter: gverdun, Assigned: attinasi)
References
Details
(Whiteboard: needed by 05/29/01)
Attachments
(2 files)
703 bytes,
text/plain
|
Details | |
1.51 KB,
patch
|
Details | Diff | Splinter Review |
###!!! ASSERTION: New URI failed: 'Error', file
C:\sb\TazMozilla\mozilla\netwerk\base\src\nsProtocolProxyService.cpp, line 302
This assertion occurs when opening a browser window for the first time. It
occurs in the Mozilla mfcEmbed test app.
In this case, the member variable pps->mPACURL is blank. Therefore, the call to
NewURI fails. There should be a check for this to avoid the assertion.
Assignee: drapeau → edburns
Summary: ###!!! ASSERTION: New URI failed: 'Error', file C:\sb\TazMozilla\mozilla\netwerk\base\src\nsProtocolProxyService.cpp, line 302 → ###!!! ASSERTION: New URI failed: 'Error', file C:\sb\TazMozilla\mozilla\netwerk\base\src\nsProtocolProxyService.cpp, line 302
Looks like this bug might be a duplicate of a bug that Ed Burns recently fixed.
Changing ownership to Ed so he can look at it and possible close it as a dup.
No, I don't think this has anything to do with my fix for bug 76921. If
anything it looks dependent on bug 53080. Reassigning to module owner.
Assignee: edburns → neeti
![]() |
||
Updated•24 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
![]() |
||
Comment 3•24 years ago
|
||
Due to interest from the very important embedding customer I'm setting --- or
Future target milestone to 0.9.1
Target Milestone: --- → mozilla0.9.1
I am not able to reproduce this assertion in a build pulled on 5/02/01 in
mfcembed.exe. Reporter: are you still seeing the assertion?
let's anyway verify that pps->mPACURL is not null and return an error if it is.
Should be a small fix.
![]() |
Reporter | |
Comment 6•24 years ago
|
||
My fault, I did not mention I was looking at the MOZILLA_0_9_BRANCH branch.
Could it be that the 1.19 revision in nsProtocolProxyService.cpp fixed it?
Summary: ###!!! ASSERTION: New URI failed: 'Error', file C:\sb\TazMozilla\mozilla\netwerk\base\src\nsProtocolProxyService.cpp, line 302 → ###!!! ASSERTION: New URI failed: 'Error', file mozilla\netwerk\base\src\nsProtocolProxyService.cpp, line 302
![]() |
||
Comment 10•24 years ago
|
||
sr=darin
![]() |
||
Comment 11•24 years ago
|
||
Checked in fix
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
![]() |
||
Comment 14•24 years ago
|
||
attinasi: My fix to remove the assertion in the trunk was simply to check for
null pps->mPACURL and return an error, since I could not reproduce this
assertion. Apparently, the assertion got fixed by your checkin to the trunk in
1.19 revision of nsProtocolProxyService.cpp for bug 53080.
Could you check this in to the branch too?
Assignee: neeti → attinasi
Status: REOPENED → NEW
![]() |
Assignee | |
Comment 15•24 years ago
|
||
Neeti, so you just checked into the trunk? I'm happy to check the patch into the
branch, I just need to pull a branch and merge it in - I'll do that now.
Status: NEW → ASSIGNED
![]() |
||
Comment 16•24 years ago
|
||
I checked the patch attached for this bug 78376 into the trunk. I applied
this patch to the branch, but, this patch does not fix the assertion in the
branch. We need to checkin your patch for revision 1.19 revision of
nsProtocolProxyService.cpp into the branch too.
![]() |
Assignee | |
Comment 17•24 years ago
|
||
![]() |
Assignee | |
Comment 18•24 years ago
|
||
I've attached the patch used for bug 53080 for review. This is the same change
as we applied to the trunk, but I applied it manually (like, I typed it in).
Once reviews are in, I'll commit it. Thanks.
Priority: -- → P2
Target Milestone: mozilla0.9.1 → mozilla0.9
![]() |
||
Comment 19•24 years ago
|
||
SPAM: mozilla 0.9 (and M1, and 0.8.1, etc.) has left the building. please
update the target milestone so we can get a good idea of what's left for 0.9.1.
![]() |
Assignee | |
Comment 20•24 years ago
|
||
This is already in the trunk, but was requested for the 0./9 branch. Updating
milestone anyway to avoid further spam...
Target Milestone: mozilla0.9 → mozilla0.9.1
![]() |
||
Comment 21•24 years ago
|
||
sr=darin
![]() |
Assignee | |
Comment 22•24 years ago
|
||
Checked into branch:
/cvsroot/mozilla/netwerk/base/src/nsProtocolProxyService.cpp,v <--
nsProtocolProxyService.cpp
new revision: 1.18.8.1; previous revision: 1.18
done
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•