fix for bug 78376 - ASSERTION: New URI failed: 'Error', file mozilla\netwerk\base\src\nsProtocolProxyService.cpp r=gagan, sr=darin